# librepods-windowsfix

./: BUILD.md  README.md
.github/workflows/: release.yml
docs/: AAP Definitions.md  control_commands.md  device-info.md  opcodes.md
windows/: AirPodsConnectPopup.qml  CMakeLists.txt  Main.qml  SegmentedControl.qml  airpods_packets.h  autostartmanager.hpp  installer.iss  main.cpp  trayiconmanager.cpp  winl2capsocket.cpp  winl2capsocket.h
windows/media/: mediacontroller.cpp  mediacontroller.h  windowsaudiocontroller.cpp  windowsaudiocontroller.h
